--- a/redux-anecdotes/package.json
+++ b/redux-anecdotes/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "unicafe-redux",
+  "name": "redux-anecdotes",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -10,7 +10,6 @@
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.6",
     "react-scripts": "5.0.0",
-    "redux": "^4.1.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -36,8 +35,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "devDependencies": {
-    "deep-freeze": "^0.0.1"
   }
 }
